bin/gramaticPackage/y.output
   0  $accept : programa $end

   1  programa : T_ID bloque_sentencias
   2           | T_ID
   3           | bloque_sentencias

   4  bloque_sentencias : BEGIN sentencias END
   5                    | BEGIN END
   6                    | error

   7  sentencias : sentencia
   8             | sentencias sentencia

   9  sentencia : declaracion
  10            | asignacion
  11            | if_statement
  12            | repeat_while_statement
  13            | salida
  14            | declaracion_funcion
  15            | goto_statement
  16            | sentencia_declarativa_tipos
  17            | T_ETIQUETA
  18            | RET '(' expresion ')' ';'
  19            | RET '(' expresion ')'
  20            | RET '(' ')'

  21  declaracion : tipo lista_var ';'
  22              | tipo lista_var error
  23              | tipo ';'

  24  lista_var : lista_var ',' T_ID
  25            | T_ID
  26            | lista_var T_ID

  27  declaracion_funcion : tipo FUN T_ID '(' parametro ')' bloque_sentencias
  28                      | tipo FUN T_ID '(' parametros_error ')' bloque_sentencias
  29                      | tipo FUN T_ID '(' tipo ')' bloque_sentencias
  30                      | tipo T_ID '(' tipo T_ID ')' bloque_sentencias
  31                      | tipo FUN '(' tipo T_ID ')' bloque_sentencias

  32  parametro : tipo T_ID

  33  parametros_error : parametro ',' parametro
  34                   | parametros_error ',' parametro
  35                   |

  36  repeat_sentencia : bloque_sentencias
  37                   | sentencia

  38  tipo : DOUBLE
  39       | LONGINT
  40       | T_ID

  41  if_statement : IF '(' condicion ')' THEN repeat_sentencia END_IF ';'
  42               | IF '(' condicion ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'
  43               | IF '(' condicion ')' THEN repeat_sentencia repeat_sentencia END_IF ';'
  44               | IF '(' condicion ')' THEN repeat_sentencia END_IF
  45               | IF '(' condicion ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF
  46               | IF '(' ')' THEN repeat_sentencia END_IF ';'
  47               | IF '(' ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'
  48               | IF '(' condicion ')' repeat_sentencia END_IF ';'
  49               | IF '(' condicion ')' repeat_sentencia ELSE repeat_sentencia END_IF ';'
  50               | IF '(' condicion ')' THEN END_IF ';'
  51               | IF '(' condicion ')' THEN ELSE END_IF ';'
  52               | IF condicion THEN repeat_sentencia END_IF ';'
  53               | IF condicion THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'
  54               | IF '(' condicion ')' THEN repeat_sentencia error ';'
  55               | IF '(' condicion ')' THEN repeat_sentencia ELSE repeat_sentencia error ';'

  56  repeat_while_statement : REPEAT repeat_sentencia WHILE '(' condicion ')' ';'
  57                         | REPEAT repeat_sentencia WHILE '(' condicion ')'
  58                         | REPEAT WHILE '(' condicion ')'
  59                         | REPEAT repeat_sentencia WHILE '(' ')' ';'
  60                         | REPEAT repeat_sentencia WHILE condicion ';'
  61                         | REPEAT repeat_sentencia error '(' condicion ')' ';'

  62  salida : OUTF '(' T_CADENA ')' ';'
  63         | OUTF '(' expresion ')' ';'
  64         | OUTF '(' expresion ')'
  65         | OUTF '(' T_CADENA ')'
  66         | OUTF '(' ')' ';'
  67         | OUTF '(' sentencia ')' ';'

  68  sentencia_declarativa_tipos : TYPEDEF T_ID T_ASIGNACION tipo subrango ';'
  69                              | TYPEDEF PAIR '<' LONGINT '>' T_ID ';'
  70                              | TYPEDEF PAIR '<' DOUBLE '>' T_ID ';'
  71                              | TYPEDEF PAIR '<' '>' T_ID ';'
  72                              | TYPEDEF PAIR DOUBLE T_ID ';'
  73                              | TYPEDEF PAIR LONGINT T_ID ';'
  74                              | TYPEDEF T_ID T_ASIGNACION tipo subrango
  75                              | TYPEDEF PAIR '<' T_ID '>' T_ID ';'
  76                              | TYPEDEF PAIR '<' LONGINT '>' T_ID
  77                              | TYPEDEF PAIR '<' DOUBLE '>' T_ID
  78                              | TYPEDEF '<' LONGINT '>' T_ID ';'
  79                              | TYPEDEF '<' DOUBLE '>' T_ID ';'
  80                              | TYPEDEF PAIR '<' LONGINT '>' ';'
  81                              | TYPEDEF PAIR '<' DOUBLE '>' ';'
  82                              | TYPEDEF T_ASIGNACION tipo subrango ';'
  83                              | TYPEDEF T_ID T_ASIGNACION subrango ';'
  84                              | TYPEDEF T_ID T_ASIGNACION tipo ';'

  85  subrango : '{' T_CTE ',' T_CTE '}'
  86           | '{' '-' T_CTE ',' T_CTE '}'
  87           | '{' T_CTE ',' '-' T_CTE '}'
  88           | '{' '-' T_CTE ',' '-' T_CTE '}'
  89           | '{' '}'
  90           | error

  91  condicion : expresion comparador expresion
  92            | expresion error expresion
  93            | expresion comparador
  94            | comparador expresion

  95  comparador : MENOR_IGUAL
  96             | MAYOR_IGUAL
  97             | DISTINTO
  98             | '='
  99             | '<'
 100             | '>'

 101  asignacion : IDENTIFIER_LIST T_ASIGNACION expresion_list error
 102             | IDENTIFIER_LIST T_ASIGNACION expresion_list ';'
 103             | IDENTIFIER_LIST T_ASIGNACION ';'

 104  expresion_list : expresion
 105                 | expresion_list ',' expresion

 106  IDENTIFIER_LIST : IDENTIFIER_LIST ',' T_ID
 107                  | IDENTIFIER_LIST ',' acceso_par
 108                  | T_ID
 109                  | acceso_par
 110                  | acceso_par error acceso_par
 111                  | T_ID error acceso_par
 112                  | acceso_par error T_ID
 113                  | error

 114  acceso_par : T_ID '{' T_CTE '}'
 115             | T_ID '{' error '}'
 116             | T_ID T_CADENA

 117  goto_statement : GOTO T_ETIQUETA ';'
 118                 | GOTO ';'
 119                 | GOTO T_ETIQUETA
 120                 | GOTO error

 121  invocacion_funcion : T_ID '(' parametro_real ')'
 122                     | T_ID '(' error ')'

 123  parametro_real : expresion_aritmetica

 124  expresion_aritmetica : expresion_aritmetica '+' expresion_aritmetica
 125                       | expresion_aritmetica '-' expresion_aritmetica
 126                       | expresion_aritmetica '*' expresion_aritmetica
 127                       | expresion_aritmetica '/' expresion_aritmetica
 128                       | T_CTE
 129                       | T_ID
 130                       | acceso_par
 131                       | unaria

 132  expresion : expresion '+' expresion
 133            | expresion '-' expresion
 134            | expresion '*' expresion
 135            | expresion '/' expresion
 136            | T_CTE
 137            | T_ID
 138            | acceso_par
 139            | invocacion_funcion
 140            | unaria
 141            | error

 142  unaria : '-' T_CTE

state 0
	$accept : . programa $end  (0)

	error  shift 1
	BEGIN  shift 2
	T_ID  shift 3
	.  error

	programa  goto 4
	bloque_sentencias  goto 5


state 1
	bloque_sentencias : error .  (6)

	.  reduce 6


state 2
	bloque_sentencias : BEGIN . sentencias END  (4)
	bloque_sentencias : BEGIN . END  (5)

	error  shift 6
	IF  shift 7
	END  shift 8
	OUTF  shift 9
	TYPEDEF  shift 10
	RET  shift 11
	REPEAT  shift 12
	GOTO  shift 13
	LONGINT  shift 14
	DOUBLE  shift 15
	T_ID  shift 16
	T_ETIQUETA  shift 17
	.  error

	sentencias  goto 18
	sentencia  goto 19
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	tipo  goto 28
	IDENTIFIER_LIST  goto 29
	acceso_par  goto 30


state 3
	programa : T_ID . bloque_sentencias  (1)
	programa : T_ID .  (2)

	error  shift 1
	BEGIN  shift 2
	$end  reduce 2

	bloque_sentencias  goto 31


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : bloque_sentencias .  (3)

	.  reduce 3


state 6
	IDENTIFIER_LIST : error .  (113)

	.  reduce 113


state 7
	if_statement : IF . '(' condicion ')' THEN repeat_sentencia END_IF ';'  (41)
	if_statement : IF . '(' condicion ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'  (42)
	if_statement : IF . '(' condicion ')' THEN repeat_sentencia repeat_sentencia END_IF ';'  (43)
	if_statement : IF . '(' condicion ')' THEN repeat_sentencia END_IF  (44)
	if_statement : IF . '(' condicion ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF  (45)
	if_statement : IF . '(' ')' THEN repeat_sentencia END_IF ';'  (46)
	if_statement : IF . '(' ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'  (47)
	if_statement : IF . '(' condicion ')' repeat_sentencia END_IF ';'  (48)
	if_statement : IF . '(' condicion ')' repeat_sentencia ELSE repeat_sentencia END_IF ';'  (49)
	if_statement : IF . '(' condicion ')' THEN END_IF ';'  (50)
	if_statement : IF . '(' condicion ')' THEN ELSE END_IF ';'  (51)
	if_statement : IF . condicion THEN repeat_sentencia END_IF ';'  (52)
	if_statement : IF . condicion THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'  (53)
	if_statement : IF . '(' condicion ')' THEN repeat_sentencia error ';'  (54)
	if_statement : IF . '(' condicion ')' THEN repeat_sentencia ELSE repeat_sentencia error ';'  (55)

	error  shift 32
	MENOR_IGUAL  shift 33
	MAYOR_IGUAL  shift 34
	DISTINTO  shift 35
	T_ID  shift 36
	T_CTE  shift 37
	'-'  shift 38
	'('  shift 39
	'<'  shift 40
	'>'  shift 41
	'='  shift 42
	.  error

	expresion  goto 43
	condicion  goto 44
	comparador  goto 45
	acceso_par  goto 46
	invocacion_funcion  goto 47
	unaria  goto 48


state 8
	bloque_sentencias : BEGIN END .  (5)

	.  reduce 5


state 9
	salida : OUTF . '(' T_CADENA ')' ';'  (62)
	salida : OUTF . '(' expresion ')' ';'  (63)
	salida : OUTF . '(' expresion ')'  (64)
	salida : OUTF . '(' T_CADENA ')'  (65)
	salida : OUTF . '(' ')' ';'  (66)
	salida : OUTF . '(' sentencia ')' ';'  (67)

	'('  shift 49
	.  error


state 10
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION tipo subrango ';'  (68)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' LONGINT '>' T_ID ';'  (69)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' DOUBLE '>' T_ID ';'  (70)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' '>' T_ID ';'  (71)
	sentencia_declarativa_tipos : TYPEDEF . PAIR DOUBLE T_ID ';'  (72)
	sentencia_declarativa_tipos : TYPEDEF . PAIR LONGINT T_ID ';'  (73)
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION tipo subrango  (74)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' T_ID '>' T_ID ';'  (75)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' LONGINT '>' T_ID  (76)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' DOUBLE '>' T_ID  (77)
	sentencia_declarativa_tipos : TYPEDEF . '<' LONGINT '>' T_ID ';'  (78)
	sentencia_declarativa_tipos : TYPEDEF . '<' DOUBLE '>' T_ID ';'  (79)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' LONGINT '>' ';'  (80)
	sentencia_declarativa_tipos : TYPEDEF . PAIR '<' DOUBLE '>' ';'  (81)
	sentencia_declarativa_tipos : TYPEDEF . T_ASIGNACION tipo subrango ';'  (82)
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION subrango ';'  (83)
	sentencia_declarativa_tipos : TYPEDEF . T_ID T_ASIGNACION tipo ';'  (84)

	PAIR  shift 50
	T_ASIGNACION  shift 51
	T_ID  shift 52
	'<'  shift 53
	.  error


state 11
	sentencia : RET . '(' expresion ')' ';'  (18)
	sentencia : RET . '(' expresion ')'  (19)
	sentencia : RET . '(' ')'  (20)

	'('  shift 54
	.  error


state 12
	repeat_while_statement : REPEAT . repeat_sentencia WHILE '(' condicion ')' ';'  (56)
	repeat_while_statement : REPEAT . repeat_sentencia WHILE '(' condicion ')'  (57)
	repeat_while_statement : REPEAT . WHILE '(' condicion ')'  (58)
	repeat_while_statement : REPEAT . repeat_sentencia WHILE '(' ')' ';'  (59)
	repeat_while_statement : REPEAT . repeat_sentencia WHILE condicion ';'  (60)
	repeat_while_statement : REPEAT . repeat_sentencia error '(' condicion ')' ';'  (61)

	error  shift 55
	IF  shift 7
	BEGIN  shift 2
	OUTF  shift 9
	TYPEDEF  shift 10
	RET  shift 11
	REPEAT  shift 12
	WHILE  shift 56
	GOTO  shift 13
	LONGINT  shift 14
	DOUBLE  shift 15
	T_ID  shift 16
	T_ETIQUETA  shift 17
	.  error

	bloque_sentencias  goto 57
	sentencia  goto 58
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	tipo  goto 28
	repeat_sentencia  goto 59
	IDENTIFIER_LIST  goto 29
	acceso_par  goto 30


state 13
	goto_statement : GOTO . T_ETIQUETA ';'  (117)
	goto_statement : GOTO . ';'  (118)
	goto_statement : GOTO . T_ETIQUETA  (119)
	goto_statement : GOTO . error  (120)

	error  shift 60
	T_ETIQUETA  shift 61
	';'  shift 62
	.  error


state 14
	tipo : LONGINT .  (39)

	.  reduce 39


state 15
	tipo : DOUBLE .  (38)

	.  reduce 38


state 16
	tipo : T_ID .  (40)
	IDENTIFIER_LIST : T_ID .  (108)
	IDENTIFIER_LIST : T_ID . error acceso_par  (111)
	acceso_par : T_ID . '{' T_CTE '}'  (114)
	acceso_par : T_ID . '{' error '}'  (115)
	acceso_par : T_ID . T_CADENA  (116)

	error  shift 63
	T_CADENA  shift 64
	'{'  shift 65
	FUN  reduce 40
	T_ASIGNACION  reduce 108
	T_ID  reduce 40
	';'  reduce 40
	','  reduce 108


state 17
	sentencia : T_ETIQUETA .  (17)

	.  reduce 17


state 18
	bloque_sentencias : BEGIN sentencias . END  (4)
	sentencias : sentencias . sentencia  (8)

	error  shift 6
	IF  shift 7
	END  shift 66
	OUTF  shift 9
	TYPEDEF  shift 10
	RET  shift 11
	REPEAT  shift 12
	GOTO  shift 13
	LONGINT  shift 14
	DOUBLE  shift 15
	T_ID  shift 16
	T_ETIQUETA  shift 17
	.  error

	sentencia  goto 67
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	tipo  goto 28
	IDENTIFIER_LIST  goto 29
	acceso_par  goto 30


state 19
	sentencias : sentencia .  (7)

	.  reduce 7


state 20
	sentencia : declaracion .  (9)

	.  reduce 9


state 21
	sentencia : asignacion .  (10)

	.  reduce 10


state 22
	sentencia : if_statement .  (11)

	.  reduce 11


state 23
	sentencia : repeat_while_statement .  (12)

	.  reduce 12


state 24
	sentencia : salida .  (13)

	.  reduce 13


state 25
	sentencia : declaracion_funcion .  (14)

	.  reduce 14


state 26
	sentencia : goto_statement .  (15)

	.  reduce 15


state 27
	sentencia : sentencia_declarativa_tipos .  (16)

	.  reduce 16


state 28
	declaracion : tipo . lista_var ';'  (21)
	declaracion : tipo . lista_var error  (22)
	declaracion : tipo . ';'  (23)
	declaracion_funcion : tipo . FUN T_ID '(' parametro ')' bloque_sentencias  (27)
	declaracion_funcion : tipo . FUN T_ID '(' parametros_error ')' bloque_sentencias  (28)
	declaracion_funcion : tipo . FUN T_ID '(' tipo ')' bloque_sentencias  (29)
	declaracion_funcion : tipo . T_ID '(' tipo T_ID ')' bloque_sentencias  (30)
	declaracion_funcion : tipo . FUN '(' tipo T_ID ')' bloque_sentencias  (31)

	FUN  shift 68
	T_ID  shift 69
	';'  shift 70
	.  error

	lista_var  goto 71


state 29
	asignacion : IDENTIFIER_LIST . T_ASIGNACION expresion_list error  (101)
	asignacion : IDENTIFIER_LIST . T_ASIGNACION expresion_list ';'  (102)
	asignacion : IDENTIFIER_LIST . T_ASIGNACION ';'  (103)
	IDENTIFIER_LIST : IDENTIFIER_LIST . ',' T_ID  (106)
	IDENTIFIER_LIST : IDENTIFIER_LIST . ',' acceso_par  (107)

	T_ASIGNACION  shift 72
	','  shift 73
	.  error


state 30
	IDENTIFIER_LIST : acceso_par .  (109)
	IDENTIFIER_LIST : acceso_par . error acceso_par  (110)
	IDENTIFIER_LIST : acceso_par . error T_ID  (112)

	error  shift 74
	T_ASIGNACION  reduce 109
	','  reduce 109


state 31
	programa : T_ID bloque_sentencias .  (1)

	.  reduce 1


state 32
	expresion : error .  (141)

	.  reduce 141


state 33
	comparador : MENOR_IGUAL .  (95)

	.  reduce 95


state 34
	comparador : MAYOR_IGUAL .  (96)

	.  reduce 96


state 35
	comparador : DISTINTO .  (97)

	.  reduce 97


state 36
	acceso_par : T_ID . '{' T_CTE '}'  (114)
	acceso_par : T_ID . '{' error '}'  (115)
	acceso_par : T_ID . T_CADENA  (116)
	invocacion_funcion : T_ID . '(' parametro_real ')'  (121)
	invocacion_funcion : T_ID . '(' error ')'  (122)
	expresion : T_ID .  (137)

	T_CADENA  shift 64
	'('  shift 75
	'{'  shift 65
	error  reduce 137
	THEN  reduce 137
	MENOR_IGUAL  reduce 137
	MAYOR_IGUAL  reduce 137
	DISTINTO  reduce 137
	'+'  reduce 137
	'-'  reduce 137
	'*'  reduce 137
	'/'  reduce 137
	')'  reduce 137
	';'  reduce 137
	','  reduce 137
	'<'  reduce 137
	'>'  reduce 137
	'='  reduce 137


state 37
	expresion : T_CTE .  (136)

	.  reduce 136


state 38
	unaria : '-' . T_CTE  (142)

	T_CTE  shift 76
	.  error


state 39
	if_statement : IF '(' . condicion ')' THEN repeat_sentencia END_IF ';'  (41)
	if_statement : IF '(' . condicion ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'  (42)
	if_statement : IF '(' . condicion ')' THEN repeat_sentencia repeat_sentencia END_IF ';'  (43)
	if_statement : IF '(' . condicion ')' THEN repeat_sentencia END_IF  (44)
	if_statement : IF '(' . condicion ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF  (45)
	if_statement : IF '(' . ')' THEN repeat_sentencia END_IF ';'  (46)
	if_statement : IF '(' . ')' THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'  (47)
	if_statement : IF '(' . condicion ')' repeat_sentencia END_IF ';'  (48)
	if_statement : IF '(' . condicion ')' repeat_sentencia ELSE repeat_sentencia END_IF ';'  (49)
	if_statement : IF '(' . condicion ')' THEN END_IF ';'  (50)
	if_statement : IF '(' . condicion ')' THEN ELSE END_IF ';'  (51)
	if_statement : IF '(' . condicion ')' THEN repeat_sentencia error ';'  (54)
	if_statement : IF '(' . condicion ')' THEN repeat_sentencia ELSE repeat_sentencia error ';'  (55)

	error  shift 32
	MENOR_IGUAL  shift 33
	MAYOR_IGUAL  shift 34
	DISTINTO  shift 35
	T_ID  shift 36
	T_CTE  shift 37
	'-'  shift 38
	')'  shift 77
	'<'  shift 40
	'>'  shift 41
	'='  shift 42
	.  error

	expresion  goto 43
	condicion  goto 78
	comparador  goto 45
	acceso_par  goto 46
	invocacion_funcion  goto 47
	unaria  goto 48


state 40
	comparador : '<' .  (99)

	.  reduce 99


state 41
	comparador : '>' .  (100)

	.  reduce 100


state 42
	comparador : '=' .  (98)

	.  reduce 98


state 43
	condicion : expresion . comparador expresion  (91)
	condicion : expresion . error expresion  (92)
	condicion : expresion . comparador  (93)
	expresion : expresion . '+' expresion  (132)
	expresion : expresion . '-' expresion  (133)
	expresion : expresion . '*' expresion  (134)
	expresion : expresion . '/' expresion  (135)

	error  shift 79
	MENOR_IGUAL  shift 33
	MAYOR_IGUAL  shift 34
	DISTINTO  shift 35
	'+'  shift 80
	'-'  shift 81
	'*'  shift 82
	'/'  shift 83
	'<'  shift 40
	'>'  shift 41
	'='  shift 42
	.  error

	comparador  goto 84


state 44
	if_statement : IF condicion . THEN repeat_sentencia END_IF ';'  (52)
	if_statement : IF condicion . THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'  (53)

	THEN  shift 85
	.  error


state 45
	condicion : comparador . expresion  (94)

	error  shift 32
	T_ID  shift 36
	T_CTE  shift 37
	'-'  shift 38
	.  error

	expresion  goto 86
	acceso_par  goto 46
	invocacion_funcion  goto 47
	unaria  goto 48


state 46
	expresion : acceso_par .  (138)

	.  reduce 138


state 47
	expresion : invocacion_funcion .  (139)

	.  reduce 139


state 48
	expresion : unaria .  (140)

	.  reduce 140


state 49
	salida : OUTF '(' . T_CADENA ')' ';'  (62)
	salida : OUTF '(' . expresion ')' ';'  (63)
	salida : OUTF '(' . expresion ')'  (64)
	salida : OUTF '(' . T_CADENA ')'  (65)
	salida : OUTF '(' . ')' ';'  (66)
	salida : OUTF '(' . sentencia ')' ';'  (67)

	error  shift 87
	IF  shift 7
	OUTF  shift 9
	TYPEDEF  shift 10
	RET  shift 11
	REPEAT  shift 12
	GOTO  shift 13
	LONGINT  shift 14
	DOUBLE  shift 15
	T_CADENA  shift 88
	T_ID  shift 89
	T_CTE  shift 37
	T_ETIQUETA  shift 17
	'-'  shift 38
	')'  shift 90
	.  error

	sentencia  goto 91
	declaracion  goto 20
	asignacion  goto 21
	if_statement  goto 22
	repeat_while_statement  goto 23
	salida  goto 24
	declaracion_funcion  goto 25
	goto_statement  goto 26
	sentencia_declarativa_tipos  goto 27
	expresion  goto 92
	tipo  goto 28
	IDENTIFIER_LIST  goto 29
	acceso_par  goto 93
	invocacion_funcion  goto 47
	unaria  goto 48


state 50
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' LONGINT '>' T_ID ';'  (69)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' DOUBLE '>' T_ID ';'  (70)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' '>' T_ID ';'  (71)
	sentencia_declarativa_tipos : TYPEDEF PAIR . DOUBLE T_ID ';'  (72)
	sentencia_declarativa_tipos : TYPEDEF PAIR . LONGINT T_ID ';'  (73)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' T_ID '>' T_ID ';'  (75)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' LONGINT '>' T_ID  (76)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' DOUBLE '>' T_ID  (77)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' LONGINT '>' ';'  (80)
	sentencia_declarativa_tipos : TYPEDEF PAIR . '<' DOUBLE '>' ';'  (81)

	LONGINT  shift 94
	DOUBLE  shift 95
	'<'  shift 96
	.  error


state 51
	sentencia_declarativa_tipos : TYPEDEF T_ASIGNACION . tipo subrango ';'  (82)

	LONGINT  shift 14
	DOUBLE  shift 15
	T_ID  shift 97
	.  error

	tipo  goto 98


state 52
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION tipo subrango ';'  (68)
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION tipo subrango  (74)
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION subrango ';'  (83)
	sentencia_declarativa_tipos : TYPEDEF T_ID . T_ASIGNACION tipo ';'  (84)

	T_ASIGNACION  shift 99
	.  error


state 53
	sentencia_declarativa_tipos : TYPEDEF '<' . LONGINT '>' T_ID ';'  (78)
	sentencia_declarativa_tipos : TYPEDEF '<' . DOUBLE '>' T_ID ';'  (79)

	LONGINT  shift 100
	DOUBLE  shift 101
	.  error


state 54
	sentencia : RET '(' . expresion ')' ';'  (18)
	sentencia : RET '(' . expresion ')'  (19)
	sentencia : RET '(' . ')'  (20)

	error  shift 32
	T_ID  shift 36
	T_CTE  shift 37
	'-'  shift 38
	')'  shift 102
	.  error

	expresion  goto 103
	acceso_par  goto 46
	invocacion_funcion  goto 47
	unaria  goto 48


state 55
	bloque_sentencias : error .  (6)
	IDENTIFIER_LIST : error .  (113)

	error  reduce 6
	IF  reduce 6
	ELSE  reduce 6
	BEGIN  reduce 6
	END_IF  reduce 6
	OUTF  reduce 6
	TYPEDEF  reduce 6
	RET  reduce 6
	REPEAT  reduce 6
	WHILE  reduce 6
	GOTO  reduce 6
	LONGINT  reduce 6
	DOUBLE  reduce 6
	T_ASIGNACION  reduce 113
	T_ID  reduce 6
	T_ETIQUETA  reduce 6
	','  reduce 113


state 56
	repeat_while_statement : REPEAT WHILE . '(' condicion ')'  (58)

	'('  shift 104
	.  error


state 57
	repeat_sentencia : bloque_sentencias .  (36)

	.  reduce 36


state 58
	repeat_sentencia : sentencia .  (37)

	.  reduce 37


state 59
	repeat_while_statement : REPEAT repeat_sentencia . WHILE '(' condicion ')' ';'  (56)
	repeat_while_statement : REPEAT repeat_sentencia . WHILE '(' condicion ')'  (57)
	repeat_while_statement : REPEAT repeat_sentencia . WHILE '(' ')' ';'  (59)
	repeat_while_statement : REPEAT repeat_sentencia . WHILE condicion ';'  (60)
	repeat_while_statement : REPEAT repeat_sentencia . error '(' condicion ')' ';'  (61)

	error  shift 105
	WHILE  shift 106
	.  error


state 60
	goto_statement : GOTO error .  (120)

	.  reduce 120


state 61
	goto_statement : GOTO T_ETIQUETA . ';'  (117)
	goto_statement : GOTO T_ETIQUETA .  (119)

	';'  shift 107
	error  reduce 119
	IF  reduce 119
	ELSE  reduce 119
	BEGIN  reduce 119
	END  reduce 119
	END_IF  reduce 119
	OUTF  reduce 119
	TYPEDEF  reduce 119
	RET  reduce 119
	REPEAT  reduce 119
	WHILE  reduce 119
	GOTO  reduce 119
	LONGINT  reduce 119
	DOUBLE  reduce 119
	T_ID  reduce 119
	T_ETIQUETA  reduce 119
	')'  reduce 119


state 62
	goto_statement : GOTO ';' .  (118)

	.  reduce 118


state 63
	IDENTIFIER_LIST : T_ID error . acceso_par  (111)

	T_ID  shift 108
	.  error

	acceso_par  goto 109


state 64
	acceso_par : T_ID T_CADENA .  (116)

	.  reduce 116


state 65
	acceso_par : T_ID '{' . T_CTE '}'  (114)
	acceso_par : T_ID '{' . error '}'  (115)

	error  shift 110
	T_CTE  shift 111
	.  error


state 66
	bloque_sentencias : BEGIN sentencias END .  (4)

	.  reduce 4


state 67
	sentencias : sentencias sentencia .  (8)

	.  reduce 8


state 68
	declaracion_funcion : tipo FUN . T_ID '(' parametro ')' bloque_sentencias  (27)
	declaracion_funcion : tipo FUN . T_ID '(' parametros_error ')' bloque_sentencias  (28)
	declaracion_funcion : tipo FUN . T_ID '(' tipo ')' bloque_sentencias  (29)
	declaracion_funcion : tipo FUN . '(' tipo T_ID ')' bloque_sentencias  (31)

	T_ID  shift 112
	'('  shift 113
	.  error


state 69
	lista_var : T_ID .  (25)
	declaracion_funcion : tipo T_ID . '(' tipo T_ID ')' bloque_sentencias  (30)

	'('  shift 114
	error  reduce 25
	T_ID  reduce 25
	';'  reduce 25
	','  reduce 25


state 70
	declaracion : tipo ';' .  (23)

	.  reduce 23


state 71
	declaracion : tipo lista_var . ';'  (21)
	declaracion : tipo lista_var . error  (22)
	lista_var : lista_var . ',' T_ID  (24)
	lista_var : lista_var . T_ID  (26)

	error  shift 115
	T_ID  shift 116
	';'  shift 117
	','  shift 118
	.  error


state 72
	asignacion : IDENTIFIER_LIST T_ASIGNACION . expresion_list error  (101)
	asignacion : IDENTIFIER_LIST T_ASIGNACION . expresion_list ';'  (102)
	asignacion : IDENTIFIER_LIST T_ASIGNACION . ';'  (103)

	error  shift 32
	T_ID  shift 36
	T_CTE  shift 37
	'-'  shift 38
	';'  shift 119
	.  error

	expresion  goto 120
	expresion_list  goto 121
	acceso_par  goto 46
	invocacion_funcion  goto 47
	unaria  goto 48


state 73
	IDENTIFIER_LIST : IDENTIFIER_LIST ',' . T_ID  (106)
	IDENTIFIER_LIST : IDENTIFIER_LIST ',' . acceso_par  (107)

	T_ID  shift 122
	.  error

	acceso_par  goto 123


state 74
	IDENTIFIER_LIST : acceso_par error . acceso_par  (110)
	IDENTIFIER_LIST : acceso_par error . T_ID  (112)

	T_ID  shift 124
	.  error

	acceso_par  goto 125


state 75
	invocacion_funcion : T_ID '(' . parametro_real ')'  (121)
	invocacion_funcion : T_ID '(' . error ')'  (122)

	error  shift 126
	T_ID  shift 127
	T_CTE  shift 128
	'-'  shift 38
	.  error

	acceso_par  goto 129
	parametro_real  goto 130
	expresion_aritmetica  goto 131
	unaria  goto 132


state 76
	unaria : '-' T_CTE .  (142)

	.  reduce 142


state 77
	if_statement : IF '(' ')' . THEN repeat_sentencia END_IF ';'  (46)
	if_statement : IF '(' ')' . THEN repeat_sentencia ELSE repeat_sentencia END_IF ';'  (47)

	THEN  shift 133
	.  error

